--- a/TestFormatter.ipynb
+++ b/TestFormatter.ipynb
@@ -272,7 +272,7 @@
    "outputs": [],
    "source": [
     "test['CID X LOC_NUM X VENDOR'] = test[\"akeed_customer_id\"].astype(str)+\" X \"+ \\\n",
-    "test_[\"location_number\"].astype(str) +\" X \"+ test_[\"id\"].astype(str)"
+    "test[\"location_number\"].astype(str) +\" X \"+ test[\"id\"].astype(str)"
    ]
   },
   {
